This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: tracemalloc: tracemalloc_log_alloc() doesn't check _Py_HASHTABLE_SET() return value
Type: Stage: resolved
Components: Versions: Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, neologix, python-dev, vstinner
Priority: normal Keywords:

Created on 2013-11-23 23:47 by vstinner, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (7)
msg204131 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-11-23 23:47
Christian posted me this warning on IRC:

** CID 1131947:  Unchecked return value  (CHECKED_RETURN) /Modules/_tracemalloc.c: 462 in tracemalloc_log_alloc()
msg204133 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2013-11-23 23:51
The functions can't signal an error because it has void as return type.
msg204193 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-11-24 10:29
New changeset c189ea6b586b by Victor Stinner in branch 'default':
Issue #19741: fix tracemalloc_log_alloc(), handle _Py_HASHTABLE_SET() failure
http://hg.python.org/cpython/rev/c189ea6b586b
msg204194 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-11-24 11:02
New changeset d8de3f4c7662 by Victor Stinner in branch 'default':
Issue #19741: tracemalloc: report tracemalloc_log_alloc() failure to the caller
http://hg.python.org/cpython/rev/d8de3f4c7662
msg204196 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-11-24 11:28
New changeset dadb5ed301c7 by Victor Stinner in branch 'default':
Issue #19741: cleanup tracemalloc_realloc()
http://hg.python.org/cpython/rev/dadb5ed301c7
msg204197 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-11-24 11:30
tracemalloc_log_alloc() failures are now handled for new allocations, but not on resize. A failure on resize is very unlikely before tracemalloc_log_free() was just called and so released exactly the requested size.

I leave the issue open just in case I find a way to handle the last case :-)
msg205181 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-12-04 00:48
New changeset 3c34ab550358 by Victor Stinner in branch 'default':
Close #19741: tracemalloc_realloc() does not release the table lock anymore
http://hg.python.org/cpython/rev/3c34ab550358
History
Date User Action Args
2022-04-11 14:57:54adminsetgithub: 63940
2013-12-04 00:48:03python-devsetstatus: open -> closed
resolution: fixed
messages: + msg205181

stage: resolved
2013-11-24 11:30:16vstinnersetmessages: + msg204197
2013-11-24 11:28:31python-devsetmessages: + msg204196
2013-11-24 11:02:48python-devsetmessages: + msg204194
2013-11-24 10:29:10python-devsetnosy: + python-dev
messages: + msg204193
2013-11-24 10:27:52vstinnersetnosy: + neologix
2013-11-23 23:51:36christian.heimessetmessages: + msg204133
2013-11-23 23:47:04vstinnercreate