Issue #19741: fix tracemalloc_log_alloc(), handle _Py_HASHTABLE_SET() failure